--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve-json": "json-server --watch data.json -p 3002"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
