--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve-json": "json-server --watch data.json -p 3002"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
