--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-server": "^1.0.0-beta.3",
     "mitt": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-plyr": "^7.0.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
