--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "json-server": "^1.0.0-beta.3",
     "mitt": "^3.0.1",
+    "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-plyr": "^7.0.0",
     "vue-router": "^4.5.0"
